--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "start": "npx ts-node src/index.ts",
     "build": "tsc -p .",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
-    "dev": "npx --env-file=.env nodemon src/index.ts"
+    "dev": "npx --env-file=.env nodemon src/index.ts",
+    "db:up": "sequelize db:migrate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sequelize/core": "^7.0.0-alpha.40",
     "@sequelize/postgres": "^7.0.0-alpha.40",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-status-codes": "^2.3.0",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
